# yap

./: .gitignore  LICENSE  README.md  install.sh  pyproject.toml  setup.py
docs/: README.md
docs/superpowers/plans/: 2026-07-01-parakeet-dictation.md
docs/superpowers/specs/: 2026-07-01-parakeet-dictation-design.md
scripts/: build_app.sh
src/parakeet_dictation/: __init__.py  __main__.py  app.py  mic.py  output.py  transcriber.py  vad.py
src/yap/: __init__.py  __main__.py  app.py  macos.py  output.py
tests/: test_output.py  test_segmenter.py  test_smoke.py  test_transcriber.py
