[project]
name = "yap"
version = "0.1.0"
description = "Stop typing, start yapping — real-time, on-device dictation for Apple Silicon Macs (NVIDIA Parakeet via MLX)"
requires-python = ">=3.12,<3.13"
dependencies = [
    "parakeet-mlx",
    "silero-vad",
    "torch",
    "sounddevice",
    # Force a modern numba (arm64 py3.12 wheels, supports numpy 2.2) so the
    # resolver does not fall back to an ancient numba that builds llvmlite.
    "numba>=0.61.2",
    "numpy>=2.2.5",
    "rumps",
    "pyobjc-core",
    "pyobjc-framework-Cocoa",
    "pyobjc-framework-Quartz",
    "pyobjc-framework-ApplicationServices",
    "pyobjc-framework-ServiceManagement",
]

[dependency-groups]
dev = ["pytest"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/yap"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
